--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.18.2",
     "i": "^0.3.7",
     "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
+    "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -19,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "json-server --watch db.json --port 5000",
+    "start-api": "json-server --watch db.json --port 8000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
